<resources>
    <string name="app_name">Calc</string>
    <string name="buttonC">C</string>
    <string name="buttonBack">\u232B</string>
    <string name="buttonInv">x\u207B\u00B9</string>

    <string name="buttonDiv">\u00F7</string>
    <string name="buttonMul">\u00D7</string>
    <string name="buttonSub">-</string>
    <string name="buttonSum">+</string>
    <string name="buttonEqual">=</string>
    <string name="buttonDot">.</string>
    <string name="buttonPM">\u00B1</string>

    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
</resources>